Added sudo permissions to CI

--- a/.github/workflows/local-ci-deployment.yaml
+++ b/.github/workflows/local-ci-deployment.yaml
@@ -14,44 +14,38 @@ jobs:
 
     steps:
       - name: Update Code & Restart
-        # We assume the runner has sudo permissions (since you installed it with sudo)
-        # We perform everything in a single block to maintain directory context
         run: |
-          # 1. Define the production path
-          PROD_DIR="/root/mywebsite"
-          
-          echo "--- Navigating to Production Folder ---"
-          cd $PROD_DIR
+          # --- CONFIGURATION ---
+          PROD_DIR="/root/mywebsite-app"
 
-          # 2. Fix the "Safe Directory" git error if owned by root
-          # This ensures git doesn't block us from pulling
+          echo "--- Checking Directory ---"
+          if [ ! -d "$PROD_DIR" ]; then
+            echo "Error: Directory $PROD_DIR does not exist."
+            exit 1
+          fi
+
+          echo "--- Fixing Git Permissions ---"
           sudo git config --global --add safe.directory $PROD_DIR
 
-          # 3. Pull the latest code
-          # This updates the code but leaves your .env file untouched
-          echo "--- Pulling latest changes ---"
-          sudo git pull origin main
+          echo "--- Pulling Latest Code ---"
+          sudo git -C $PROD_DIR pull origin main
 
-          # 4. Build the new image
-          # This uses the .env file ALREADY present in this folder
           echo "--- Building App Image ---"
-          sudo docker compose build app
+          sudo docker compose --project-directory $PROD_DIR build app
 
-          # 5. Smart Restart
-          # Since we are in the correct folder, Docker knows this is the SAME project.
-          # It will recreate 'mywebsite-app' gracefully with the new image.
           echo "--- Recreating App Container ---"
-          sudo docker compose up -d --no-deps app
+          sudo docker compose --project-directory $PROD_DIR up -d --no-deps app
 
       - name: Verify Health
         run: |
-          echo "--- Checking Docker Container ---"
-          if [ -z "$(sudo docker compose ps -q app)" ]; then
+          PROD_DIR="/root/mywebsite-app"
+          
+          echo "--- Internal Docker Check ---"
+          if [ -z "$(sudo docker compose --project-directory $PROD_DIR ps -q app)" ]; then
             echo "Error: App container is not running!"
             exit 1
           fi
 
-          echo "--- Checking Website URL ---"
-          # Wait a moment for Nginx/App handshake
+          echo "--- External URL Check ---"
           sleep 5
           curl -f -I -L https://liormilliger.com
