Ansible project added and an error.html file for nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,23 @@ server {
     location ~* (?:\.php$|\.env|\.git|aws-credentials|wp-admin|wp-login|xmlrpc) {
         return 404;
     }
+# --- CUSTOM ERROR PAGE CONFIGURATION ---
+
+    # 1. Define which errors trigger the custom page
+    # 404 = Not Found, 500-504 = Server/App Unavailable
+    error_page 404 500 502 503 504 /error.html;
+
+    # 2. Map the virtual URL /error.html to the real file path
+    location = /error.html {
+        alias /root/mywebsite/app/templates/error.html;
+        internal; # Prevents external users from visiting /error.html directly
+    }
+
+    # 3. Serve the background image
+    # Matches requests for /app/static/files/blackcat-pipelines.jpg
+    location /app/static/files/ {
+        alias /root/mywebsite/app/static/files/;
+    }
     
     location / {
         proxy_pass http://app:5000;
