--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ server {
     # 3. Serve the background image
     # Matches requests for /app/static/files/blackcat-pipelines.jpg
     location /app/static/files/ {
-        alias /root/mywebsite/app/static/files/;
+        alias /root/mywebsite/app/static/files/blackcat-pipelines.jpg;
     }
     
     location / {
