Changed nginx error handling and welcome page text

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,24 +31,24 @@ server {
     }
 # --- CUSTOM ERROR PAGE CONFIGURATION ---
 
-    # 1. Define which errors trigger the custom page
-    # 404 = Not Found, 500-504 = Server/App Unavailable
+    # 1. Intercept errors so Nginx shows this page instead of the App's 404
     error_page 404 500 502 503 504 /error.html;
 
-    # 2. Map the virtual URL /error.html to the real file path
+    # 2. Serve the HTML file from the internal Docker path
     location = /error.html {
-        alias /root/mywebsite/app/templates/error.html;
-        internal; # Prevents external users from visiting /error.html directly
+        alias /var/www/error_pages/error.html;
+        internal; 
     }
 
-    # 3. Serve the background image
-    # Matches requests for /app/static/files/blackcat-pipelines.jpg
-    location /app/static/files/ {
-        alias /root/mywebsite/app/static/files/blackcat-pipelines.jpg;
+    # 3. Serve the Image
+    # This captures the EXACT URL your HTML asks for
+    location = /blackcat-pipelines.jpg {
+        alias /var/www/error_pages/blackcat-pipelines.jpg;
     }
-    
+
     location / {
         proxy_pass http://app:5000;
+        proxy_intercept_errors on;
         proxy_set_header Host \$host;
         proxy_set_header X-Real-IP \$remote_addr;
         proxy_set_header X-Forwarded-For \$remote_addr;
